[metadata]
name = xml2rfc
version = 3.17.0
description = xml2rfc generates RFCs and IETF drafts from document source in XML according to the IETF xml2rfc v2 and v3 vocabularies.
long_description = file:  README.md
long_description_content_type = text/markdown
keywords = ietf, rfc, id, internet-draft, xml, xml2rfc
author = Henrik Levkowetz
author_email = tools-discuss@ietf.org
maintainer = Kesara Rathnayake
maintainer_email = kesara@staff.ietf.org
url = https://github.com/ietf-tools/xml2rfc
download_url = https://github.com/ietf-tools/xml2rfc/releases
license = Revised BSD License
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Topic :: Text Processing
    Topic :: Text Processing :: Markup :: XML
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
packages = xml2rfc, xml2rfc/writers, xml2rfc/util, xml2rfc/uniscripts
zip_safe = False
include_package_data = True
install_requires =
    appdirs>=1.4.4
    configargparse>=1.2.3
    google-i18n-address>=2.3.2
    html5lib>=1.0.1
    intervaltree>=3.1.0
    jinja2>=3.1.2
    markupsafe>=2.1.1
    lxml>=4.9.0
    pycountry>=22.3.5
    pyyaml>=5.3.1
    requests>=2.5.0
    setuptools>=24.2.0
    six>=1.4.1
    wcwidth>=0.2.5

[options.entry_points]
console_scripts =
    xml2rfc = xml2rfc.run:main

[options.extras_require]
pdf = weasyprint>=53.0,!=57.0

[bdist_wheel]
universal = 1
